--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -541,12 +541,10 @@
   "wallet.legacy.notification.actionLearnMore": "もっと知る",
   "wallet.legacy.notification.actionMove": "テストネット用ADAを移し替える",
   "wallet.legacy.notification.addWallet": "報酬ウォレットを作成する",
-  "wallet.legacy.notification.addWalletDescription.line1": "「{activeWalletName}」は残高ウォレットです。現在模擬スナップショットでメインネットからコピーしたテストネット用ADAが入っています。",
-  "wallet.legacy.notification.addWalletDescription.line2": "テストネット用ADAのステークを委任して報酬を得るためには「報酬ウォレット」を作成してください。",
   "wallet.legacy.notification.addWalletTitle": "報酬ウォレットを作成してください",
+  "wallet.legacy.notification.descriptionWithFunds": "!!!\"{transferWalletName}\"\" is a legacy wallet. It does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new, Shelley-compatible wallet. You can create a brand new wallet or move funds to one of the existing wallets.",
+  "wallet.legacy.notification.descriptionWithNoFunds": "!!!\"{transferWalletName}\"\" is a legacy wallet. It does not support Shelley delegation features. Move testnet ada to a Rewards wallet to delegate your testnet ada stake and earn rewards.",
   "wallet.legacy.notification.learnMore.url": "https://iohk.zendesk.com/hc/ja/articles/360038726373",
-  "wallet.legacy.notification.descriptionWithNoFunds.line1": "「{activeWalletName}」は残高ウォレットです。現在模擬スナップショットでメインネットからコピーしたテストネット用ADAが入っています。",
-  "wallet.legacy.notification.descriptionWithNoFunds.line2": "テストネット用ADAのステークを委任して報酬を得るためには、テストネット用ADAを「報酬ウォレット」に移し替えてください。",
   "wallet.legacy.notification.moveFundsTitle": "「{activeWalletName}」のテストネット用ADAを移し替えてください",
   "wallet.navigation.more": "その他",
   "wallet.navigation.receive": "入金",
