--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -539,11 +539,11 @@
   "wallet.import.file.dialog.title": "Import wallets",
   "wallet.legacy.badge.label": "Legacy",
   "wallet.legacy.notification.actionLearnMore": "Learn more",
-  "wallet.legacy.notification.actionMove": "Move testnet ada",
+  "wallet.legacy.notification.actionMove": "Move ada from this wallet",
   "wallet.legacy.notification.addWallet": "!!!Create a new Rewards wallet",
   "wallet.legacy.notification.addWalletTitle": "Create a new wallet",
   "wallet.legacy.notification.descriptionWithFunds": "<q>{activeWalletName}</q> is a legacy wallet. It does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new, Shelley-compatible wallet. You can create a brand new wallet or move funds to one of the existing wallets.",
-  "wallet.legacy.notification.descriptionWithNoFunds": "<q>{activeWalletName}</q> is a legacy wallet. It does not support Shelley delegation features. Move testnet ada to a Rewards wallet to delegate your testnet ada stake and earn rewards.",
+  "wallet.legacy.notification.descriptionWithNoFunds": "<q>{activeWalletName}</q> is a legacy wallet. It does not support Shelley delegation features. Move ada from this wallet to a Rewards wallet to delegate your testnet ada stake and earn rewards.",
   "wallet.legacy.notification.learnMore.url": "https://iohk.zendesk.com/hc/en-us/articles/360038726373",
   "wallet.legacy.notification.moveFundsTitle": "Move funds from <q>{activeWalletName}</q>",
   "wallet.navigation.more": "More",
