[DDW-256]: Fix sidebar hardware wallets handling error and add missing japanese translations

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -714,9 +714,9 @@
   "wallet.settings.deleteWallet.warning1": "このウォレットは、一旦削除するとDaedalusインターフェイスから取り除かれ、ウォレットに残っている資金にアクセスできなくなります。削除したウォレットに再びアクセスする唯一の方法は、ウォレット復元フレーズを使用して復元することです。",
   "wallet.settings.deleteWallet.warning2": "将来このウォレットが必要となったときに復元できるよう、ウォレットを削除する前に復元フレーズを検証しておくことをお勧めします。",
   "wallet.settings.deleteWalletButtonLabel": "ウォレットを削除する",
-  "wallet.settings.exportToFile.dialog.headline": "!!!Export Wallet",
-  "wallet.settings.exportToFile.dialog.introduction": "!!!You are exporting <strong>{walletName}</strong> to a file.",
-  "wallet.settings.exportToFile.dialog.submit.label": "!!!Export",
+  "wallet.settings.exportToFile.dialog.headline": "ウォレットをエクスポートする",
+  "wallet.settings.exportToFile.dialog.introduction": "<strong>{walletName}</strong>をファイルにエクスポートします。",
+  "wallet.settings.exportToFile.dialog.submit.label": "エクスポートする",
   "wallet.settings.name.label": "ウォレット名",
   "wallet.settings.password": "パスワード",
   "wallet.settings.passwordLastUpdated": "最終更新 {lastUpdated}",
