--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -429,9 +429,9 @@
   "static.splash.network.itnNetworkName": "Rewards",
   "static.splash.network.itnVersionName": "INCENTIVIZED TESTNET v1",
   "static.splash.network.linkLabel": "Learn more",
-  "static.splash.network.stnDescription": "This version of Daedalus has been created specifically for the use with the Shelley Testnet.",
+  "static.splash.network.stnDescription": "This version of Daedalus has been created specifically for the use with the Shelley Friends & Family Testnet.",
   "static.splash.network.stnLinkUrl": "https://testnets.cardano.org/en/shelley/overview/",
-  "static.splash.network.stnVersionName": "SHELLEY TESTNET",
+  "static.splash.network.stnVersionName": "SHELLEY FRIENDS & FAMILY TESTNET",
   "static.splash.network.title": "Daedalus",
   "status.icons.checkYourInternetConnection": "Check your <b>Internet connection</b>",
   "status.icons.isNodeRespondingLoading": "Checking if Cardano node is <b>responding</b>",
@@ -635,10 +635,10 @@
   "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer2": "We strongly recommend that you delete the Balance wallet which is restored from your hardware wallet once you have moved any funds into a Rewards wallet.",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind": "What kind of Daedalus wallet would you like to restore?",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance12Word": "12 words",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance12Word.itn": "12 words <em>(Balance wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance12Word.itn": "12 words <em>(legacy wallet)</em>",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance27Word": "27 words - paper wallet",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance27Word.itn": "27 words - paper wallet <em>(Balance wallet)</em>",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindReward15Word": "15 words <em>(Rewards wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance27Word.itn": "27 words - paper wallet <em>(legacy wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindReward15Word": "15 words",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKind": "What kind of hardware wallet would you like to restore?",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindLedger": "12, 18 or 24 words - Ledger Nano S or Nano X (Balance wallet)",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindTrezor": "12, 18 or 24 words - Trezor (Balance wallet)",
@@ -647,8 +647,8 @@
   "wallet.restore.dialog.step.walletKind.label.walletKindHardware": "Hardware wallet",
   "wallet.restore.dialog.step.walletKind.label.walletKindYoroi": "Yoroi wallet",
   "wallet.restore.dialog.step.walletKind.label.yoroiWalletKind": "What kind of Yoroi wallet would you like to restore?",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindBalance15Word": "15 words <em>(Balance wallet)</em>",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindReward15Word": "15 words <em>(Rewards wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindBalance15Word": "15 words <em>(legacy wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindReward15Word": "15 words",
   "wallet.restore.dialog.stepsCounter": "Step {currentStep} of {totalSteps}",
   "wallet.restore.dialog.tab.title.certificate": "Daedalus paper wallet",
   "wallet.restore.dialog.tab.title.recoveryPhrase": "Daedalus wallet",
