--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -431,7 +431,7 @@
   "static.splash.network.linkLabel": "もっと知る",
   "static.splash.network.stnDescription": "このDaedalusバージョンは、Shelleyテストネットで使用するための専用バージョンです。",
   "static.splash.network.stnLinkUrl": "https://testnets.cardano.org/en/shelley/overview/",
-  "static.splash.network.stnVersionName": "SHELLEY TESTNET",
+  "static.splash.network.stnVersionName": "SHELLEY FRIENDS & FAMILY TESTNET",
   "static.splash.network.title": "Daedalus",
   "status.icons.checkYourInternetConnection": "<b>インターネット接続</b>を確認してください",
   "status.icons.isNodeRespondingLoading": "Cardanoノードの<b>応答</b>を確認しています",
