--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -250,6 +250,7 @@
   "settings.display.themeNames.flightCandidate": "Flight Candidate",
   "settings.display.themeNames.incentivizedTestnet": "Incentivized Testnet",
   "settings.display.themeNames.lightBlue": "Light blue",
+  "settings.display.themeNames.shelleyTestnet": "Shelley Testnet",
   "settings.display.themeNames.white": "White",
   "settings.display.themeNames.yellow": "Yellow",
   "settings.menu.display.link.label": "Themes",
