--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -92,7 +92,7 @@
   "environment.apiName.cardano": "Cardano",
   "environment.currency.ada": "Ada",
   "environment.network.development": "Development",
-  "environment.network.ff": "Shelley Friends & Family Testnet",
+  "environment.network.ff": "Shelley Testnet",
   "environment.network.itn_rewards_v1": "Incentivized Testnet v1 - Rewards",
   "environment.network.itn_selfnode": "ITN Selfnode",
   "environment.network.mainnet": "Mainnet",
@@ -430,9 +430,9 @@
   "static.splash.network.itnNetworkName": "Rewards",
   "static.splash.network.itnVersionName": "INCENTIVIZED TESTNET v1",
   "static.splash.network.linkLabel": "Learn more",
-  "static.splash.network.stnDescription": "This version of Daedalus has been created specifically for the use with the Shelley Friends & Family Testnet.",
+  "static.splash.network.stnDescription": "This version of Daedalus has been created specifically for the use with the second phase of the Shelley Testnet.",
   "static.splash.network.stnLinkUrl": "https://testnets.cardano.org/en/shelley/overview/",
-  "static.splash.network.stnVersionName": "SHELLEY FRIENDS & FAMILY TESTNET",
+  "static.splash.network.stnVersionName": "SHELLEY TESTNET",
   "static.splash.network.title": "Daedalus",
   "status.icons.checkYourInternetConnection": "Check your <b>Internet connection</b>",
   "status.icons.isNodeRespondingLoading": "Checking if Cardano node is <b>responding</b>",
@@ -474,7 +474,7 @@
   "test.environment.nightlyLabel": "Nightly",
   "test.environment.qaLabel": "QA",
   "test.environment.selfnodeLabel": "Selfnode",
-  "test.environment.shelleyFfLabel": "Shelley Friends & Family Testnet",
+  "test.environment.shelleyFfLabel": "Shelley Testnet",
   "test.environment.shelleyQaLabel": "Shelley QA",
   "test.environment.stagingLabel": "Staging",
   "test.environment.testnetLabel": "Testnet",
