--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -92,7 +92,7 @@
   "environment.apiName.cardano": "Cardano",
   "environment.currency.ada": "ADA",
   "environment.network.development": "開発",
-  "environment.network.ff": "Shelley Friends & Family Testnet",
+  "environment.network.ff": "Shelley Testnet",
   "environment.network.itn_rewards_v1": "Incentivized Testnet v1 - Rewards",
   "environment.network.itn_selfnode": "ITN Selfnode",
   "environment.network.mainnet": "メインネット",
@@ -430,9 +430,9 @@
   "static.splash.network.itnNetworkName": "Rewards",
   "static.splash.network.itnVersionName": "INCENTIVIZED TESTNET v1",
   "static.splash.network.linkLabel": "もっと知る",
-  "static.splash.network.stnDescription": "このDaedalusバージョンは、Shelleyテストネットで使用するための専用バージョンです。",
+  "static.splash.network.stnDescription": "このDaedalusバージョンは、Shelleyテストネット第2フェーズで使用するための専用バージョンです。",
   "static.splash.network.stnLinkUrl": "https://testnets.cardano.org/en/shelley/overview/",
-  "static.splash.network.stnVersionName": "SHELLEY FRIENDS & FAMILY TESTNET",
+  "static.splash.network.stnVersionName": "Shelleyテストネット",
   "static.splash.network.title": "Daedalus",
   "status.icons.checkYourInternetConnection": "<b>インターネット接続</b>を確認してください",
   "status.icons.isNodeRespondingLoading": "Cardanoノードの<b>応答</b>を確認しています",
@@ -474,7 +474,7 @@
   "test.environment.nightlyLabel": "Nightly",
   "test.environment.qaLabel": "QA",
   "test.environment.selfnodeLabel": "Selfnode",
-  "test.environment.shelleyFfLabel": "Shelley Friends & Family Testnet",
+  "test.environment.shelleyFfLabel": "Shelley Testnet",
   "test.environment.shelleyQaLabel": "Shelley QA",
   "test.environment.stagingLabel": "ステージング",
   "test.environment.testnetLabel": "テストネット",
