[DDW-200] Update copy to cover additional screens (#2030)
* Disable address validation for Shelley networks

* [DDW-200] Init

* [DDW-200] CHANGELOG

* Revert "[DDW-200] Init"

This reverts commit 96515720a3aaf90495475982914547fee5be00e2.

* [DDW-200] Remove isFamilyAndFriends checking

* [DDW-200] Remaining changes

* [DDW-200] Translation manager

* [DDW-200] 'Move ada from this wallet' copy

Co-authored-by: Nikola Glumac <niglumac@gmail.com>

--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -541,17 +541,15 @@
   "wallet.import.file.dialog.stateDirOptionLabel": "Daedalus state directory",
   "wallet.import.file.dialog.stateFolderLabel": "Select Daedalus state directory:",
   "wallet.import.file.dialog.title": "Import wallets",
-  "wallet.legacy.badge.label": "Balance",
+  "wallet.legacy.badge.label": "Legacy",
   "wallet.legacy.notification.actionLearnMore": "Learn more",
-  "wallet.legacy.notification.actionMove": "Move testnet ada",
-  "wallet.legacy.notification.addWallet": "Create a new Rewards wallet",
-  "wallet.legacy.notification.addWalletDescription.line1": "<q>{activeWalletName}</q> is a Balance wallet. It currently holds the testnet ada copied from the mainnet via the balance check snapshot.",
-  "wallet.legacy.notification.addWalletDescription.line2": "Create a Rewards wallet to delegate your testnet ada stake and earn rewards.",
-  "wallet.legacy.notification.addWalletTitle": "Create a Rewards wallet",
+  "wallet.legacy.notification.actionMove": "Move ada from this wallet",
+  "wallet.legacy.notification.addWallet": "!!!Create a new Rewards wallet",
+  "wallet.legacy.notification.addWalletTitle": "Create a new wallet",
+  "wallet.legacy.notification.descriptionWithFunds": "<q>{activeWalletName}</q> is a legacy wallet. It does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new, Shelley-compatible wallet. You can create a brand new wallet or move funds to one of the existing wallets.",
+  "wallet.legacy.notification.descriptionWithNoFunds": "<q>{activeWalletName}</q> is a legacy wallet. It does not support Shelley delegation features. Move ada from this wallet to a Rewards wallet to delegate your testnet ada stake and earn rewards.",
   "wallet.legacy.notification.learnMore.url": "https://iohk.zendesk.com/hc/en-us/articles/360038726373",
-  "wallet.legacy.notification.moveFundsDescription.line1": "<q>{activeWalletName}</q> is a Balance wallet. It currently holds the testnet ada copied from the mainnet via the balance check snapshot.",
-  "wallet.legacy.notification.moveFundsDescription.line2": "Move testnet ada to a Rewards wallet to delegate your testnet ada stake and earn rewards.",
-  "wallet.legacy.notification.moveFundsTitle": "Move testnet ada from <q>{activeWalletName}</q>",
+  "wallet.legacy.notification.moveFundsTitle": "Move funds from <q>{activeWalletName}</q>",
   "wallet.navigation.more": "More",
   "wallet.navigation.receive": "Receive",
   "wallet.navigation.send": "Send",
@@ -820,16 +818,16 @@
   "wallet.transaction.unresolvedInputAddressesLinkLabel": "Open this transaction in Cardano explorer",
   "wallet.transactions.no.transactions": "No transactions",
   "wallet.transferFunds.dialog1.continueLabel": "Continue",
-  "wallet.transferFunds.dialog1.sourceWallet": "From Balance wallet",
-  "wallet.transferFunds.dialog1.targetWallet": "To Rewards wallet",
-  "wallet.transferFunds.dialog1.title": "Transfer funds from the Balance wallet",
+  "wallet.transferFunds.dialog1.sourceWallet": "From legacy wallet",
+  "wallet.transferFunds.dialog1.targetWallet": "To Shelley-compatible wallet",
+  "wallet.transferFunds.dialog1.title": "Transfer funds from the legacy wallet",
   "wallet.transferFunds.dialog2.label.amount": "Amount",
   "wallet.transferFunds.dialog2.label.buttonLabel": "Transfer funds",
-  "wallet.transferFunds.dialog2.label.description": "Confirm transfer from the {sourceWalletName} wallet to the {targetWalletName} wallet.",
+  "wallet.transferFunds.dialog2.label.description": "Confirm transfer from {sourceWalletName} wallet to the {targetWalletName} wallet.",
   "wallet.transferFunds.dialog2.label.fees": "Fees",
   "wallet.transferFunds.dialog2.label.to": "To",
   "wallet.transferFunds.dialog2.label.total": "Total",
   "wallet.transferFunds.dialog2.passphraseFieldPlaceholder": "Type your spending password",
   "wallet.transferFunds.dialog2.passphraseLabel": "Spending password",
-  "wallet.transferFunds.dialog2.title": "Transfer funds from the Balance wallet"
+  "wallet.transferFunds.dialog2.title": "Transfer funds from the legacy wallet"
 }
