[DDW-261] Add missing translations

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -92,7 +92,7 @@
   "environment.apiName.cardano": "Cardano",
   "environment.currency.ada": "ADA",
   "environment.network.development": "開発",
-  "environment.network.ff": "Shelley Testnet",
+  "environment.network.ff": "Shelleyテストネット",
   "environment.network.itn_rewards_v1": "Incentivized Testnet v1 - Rewards",
   "environment.network.itn_selfnode": "ITN Selfnode",
   "environment.network.mainnet": "メインネット",
@@ -253,7 +253,7 @@
   "settings.display.themeNames.flightCandidate": "Flight候補版",
   "settings.display.themeNames.incentivizedTestnet": "インセンティブ付きテストネット",
   "settings.display.themeNames.lightBlue": "ライトブルー",
-  "settings.display.themeNames.shelleyTestnet": "Shelley Testnet",
+  "settings.display.themeNames.shelleyTestnet": "Shelleyテストネット",
   "settings.display.themeNames.white": "ホワイト",
   "settings.display.themeNames.yellow": "イエロー",
   "settings.menu.display.link.label": "テーマ",
@@ -478,7 +478,7 @@
   "test.environment.nightlyLabel": "Nightly",
   "test.environment.qaLabel": "QA",
   "test.environment.selfnodeLabel": "Selfnode",
-  "test.environment.shelleyFfLabel": "Shelley Testnet",
+  "test.environment.shelleyFfLabel": "Shelleyテストネット",
   "test.environment.shelleyQaLabel": "Shelley QA",
   "test.environment.stagingLabel": "ステージング",
   "test.environment.testnetLabel": "テストネット",
