[DDW-261] Adds missing Japanese translation

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -820,7 +820,7 @@
   "wallet.transaction.type.exchange": "換金",
   "wallet.transaction.unresolvedInputAddressesAdditionalLabel": "アドレスを表示する。",
   "wallet.transaction.unresolvedInputAddressesLinkLabel": "Cardanoエクスプローラーでこのトランザクションを開き",
-  "wallet.transaction.unresolvedInputAddressesLinkUnavailableLabel": "!!!Cardano Explorer link currently unavailable.",
+  "wallet.transaction.unresolvedInputAddressesLinkUnavailableLabel": "Cardanoエクスプローラーのリンクは現在使用できません。",
   "wallet.transactions.no.transactions": "トランザクションはありません",
   "wallet.transferFunds.dialog1.continueLabel": "続ける",
   "wallet.transferFunds.dialog1.sourceWallet": "送金元残高ウォレット",
