[DDW-261] Copy updates

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -545,17 +545,17 @@
   "wallet.import.file.dialog.stateDirOptionLabel": "Daedalusステータスディレクトリー",
   "wallet.import.file.dialog.stateFolderLabel": "Daedalusステータスディレクトリーを選択してください:",
   "wallet.import.file.dialog.title": "ウォレットをインポートする",
-  "wallet.legacy.badge.label": "残高",
-  "wallet.legacy.notification.actionLearnMore": "もっと知る",
-  "wallet.legacy.notification.actionMove": "テストネット用ADAを移し替える",
-  "wallet.legacy.notification.addWallet": "報酬ウォレットを作成する",
-  "wallet.legacy.notification.addWalletDescription.line1": "「{activeWalletName}」は残高ウォレットです。現在模擬スナップショットでメインネットからコピーしたテストネット用ADAが入っています。",
-  "wallet.legacy.notification.addWalletDescription.line2": "テストネット用ADAのステークを委任して報酬を得るためには「報酬ウォレット」を作成してください。",
-  "wallet.legacy.notification.addWalletTitle": "報酬ウォレットを作成してください",
-  "wallet.legacy.notification.learnMore.url": "https://iohk.zendesk.com/hc/ja/articles/360038726373",
-  "wallet.legacy.notification.moveFundsDescription.line1": "「{activeWalletName}」は残高ウォレットです。現在模擬スナップショットでメインネットからコピーしたテストネット用ADAが入っています。",
-  "wallet.legacy.notification.moveFundsDescription.line2": "テストネット用ADAのステークを委任して報酬を得るためには、テストネット用ADAを「報酬ウォレット」に移し替えてください。",
-  "wallet.legacy.notification.moveFundsTitle": "「{activeWalletName}」のテストネット用ADAを移し替えてください",
+  "wallet.byron.badge.label": "残高",
+  "wallet.byron.notification.actionLearnMore": "もっと知る",
+  "wallet.byron.notification.actionMove": "テストネット用ADAを移し替える",
+  "wallet.byron.notification.addWallet": "報酬ウォレットを作成する",
+  "wallet.byron.notification.addWalletDescription.line1": "「{activeWalletName}」は残高ウォレットです。現在模擬スナップショットでメインネットからコピーしたテストネット用ADAが入っています。",
+  "wallet.byron.notification.addWalletDescription.line2": "テストネット用ADAのステークを委任して報酬を得るためには「報酬ウォレット」を作成してください。",
+  "wallet.byron.notification.addWalletTitle": "報酬ウォレットを作成してください",
+  "wallet.byron.notification.learnMore.url": "https://iohk.zendesk.com/hc/ja/articles/360038726373",
+  "wallet.byron.notification.moveFundsDescription.line1": "「{activeWalletName}」は残高ウォレットです。現在模擬スナップショットでメインネットからコピーしたテストネット用ADAが入っています。",
+  "wallet.byron.notification.moveFundsDescription.line2": "テストネット用ADAのステークを委任して報酬を得るためには、テストネット用ADAを「報酬ウォレット」に移し替えてください。",
+  "wallet.byron.notification.moveFundsTitle": "「{activeWalletName}」のテストネット用ADAを移し替えてください",
   "wallet.navigation.more": "その他",
   "wallet.navigation.receive": "入金",
   "wallet.navigation.send": "送金",
