--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -483,7 +483,7 @@
   "test.environment.stagingLabel": "Staging",
   "test.environment.testnetLabel": "Testnet",
   "wallet.add.dialog.create.description": "Create a new wallet",
-  "wallet.add.dialog.create.description.itn": "Create a new Rewards wallet",
+  "wallet.add.dialog.create.description.itn": "Create a new wallet",
   "wallet.add.dialog.create.label": "Create",
   "wallet.add.dialog.import.description": "Import wallets from an earlier version of Daedalus or the Daedalus state directory",
   "wallet.add.dialog.import.label": "Import",
@@ -524,7 +524,7 @@
   "wallet.create.dialog.stepsCounter": "Step {currentStep} of {totalSteps}",
   "wallet.create.dialog.templateStep": "Template",
   "wallet.create.dialog.title": "Create a wallet",
-  "wallet.create.dialog.title.itn": "Create a new Rewards wallet",
+  "wallet.create.dialog.title.itn": "Create a new wallet",
   "wallet.create.dialog.validateStep": "Validate",
   "wallet.create.dialog.walletNameHint": "Enter wallet name",
   "wallet.hardware.hardwareWalletBegin": "To begin, connect and unlock your <span>Hardware wallet Device</span>",
@@ -545,17 +545,18 @@
   "wallet.import.file.dialog.stateDirOptionLabel": "Daedalus state directory",
   "wallet.import.file.dialog.stateFolderLabel": "Select Daedalus state directory:",
   "wallet.import.file.dialog.title": "Import wallets",
-  "wallet.legacy.badge.label": "Balance",
-  "wallet.legacy.notification.actionLearnMore": "Learn more",
-  "wallet.legacy.notification.actionMove": "Move testnet ada",
-  "wallet.legacy.notification.addWallet": "Create a new Rewards wallet",
-  "wallet.legacy.notification.addWalletDescription.line1": "<q>{activeWalletName}</q> is a Balance wallet. It currently holds the testnet ada copied from the mainnet via the balance check snapshot.",
-  "wallet.legacy.notification.addWalletDescription.line2": "Create a Rewards wallet to delegate your testnet ada stake and earn rewards.",
-  "wallet.legacy.notification.addWalletTitle": "Create a Rewards wallet",
-  "wallet.legacy.notification.learnMore.url": "https://iohk.zendesk.com/hc/en-us/articles/360038726373",
-  "wallet.legacy.notification.moveFundsDescription.line1": "<q>{activeWalletName}</q> is a Balance wallet. It currently holds the testnet ada copied from the mainnet via the balance check snapshot.",
-  "wallet.legacy.notification.moveFundsDescription.line2": "Move testnet ada to a Rewards wallet to delegate your testnet ada stake and earn rewards.",
-  "wallet.legacy.notification.moveFundsTitle": "Move testnet ada from <q>{activeWalletName}</q>",
+  "wallet.byron.badge.label": "Byron",
+  "wallet.byron.notification.actionLearnMore": "Learn more",
+  "wallet.byron.notification.actionMove": "Move testnet ada",
+  "wallet.byron.notification.addWallet": "Create a new wallet",
+  "wallet.byron.notification.addWalletDescription.line1": "<q>{activeWalletName}</q> is a Byron legacy wallet that does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new wallet that is Shelley-compatible.",
+  "wallet.byron.notification.addWalletDescription.line2": "Since all of your wallets are Byron legacy wallets you will first need to create a new Shelley wallet.",
+  "wallet.byron.notification.addWalletTitle": "Create a Shelley wallet",
+  "wallet.byron.notification.learnMore.url": "https://iohk.zendesk.com/hc/en-us/articles/360038726373",
+  "wallet.byron.notification.moveFundsDescription.line1": "<q>{activeWalletName}</q> is a Byron legacy wallet that does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new wallet that is Shelley-compatible.",
+  "wallet.byron.notification.moveFundsDescription.line2": " You can create a {link} or move funds to one of your existing wallets.",
+  "wallet.byron.notification.moveFundsDescription.line2.link.label": "brand new wallet",
+  "wallet.byron.notification.moveFundsTitle": "Move testnet ada from <q>{activeWalletName}</q>",
   "wallet.navigation.more": "More",
   "wallet.navigation.receive": "Receive",
   "wallet.navigation.send": "Send",
