--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -480,7 +480,7 @@
   "test.environment.stagingLabel": "ステージング",
   "test.environment.testnetLabel": "テストネット",
   "wallet.add.dialog.create.description": "ウォレットを新規作成する",
-  "wallet.add.dialog.create.description.itn": "報酬ウォレットを作成する",
+  "wallet.add.dialog.create.description.itn": "Shelleyウォレットを作成する",
   "wallet.add.dialog.create.label": "作成",
   "wallet.add.dialog.import.description": "Daedalusの前バージョンまたはDaedalusステータスディレクトリーからウォレットをインポートする",
   "wallet.add.dialog.import.label": "インポート",
@@ -508,7 +508,7 @@
   "wallet.backup.recovery.phrase.entry.dialog.verification.instructions": "書き留めた通りの正しい順に単語をクリックして、ウォレットの復元フレーズを検証してください。",
   "wallet.create.dialog.configStep": "!!!Config",
   "wallet.create.dialog.create.personal.wallet.button.label": "ウォレットを作成する",
-  "wallet.create.dialog.create.personal.wallet.button.label.itn": "報酬ウォレット作成する",
+  "wallet.create.dialog.create.personal.wallet.button.label.itn": "Shelleyウォレット作成する",
   "wallet.create.dialog.hashImageStep": "!!!Hash & Image",
   "wallet.create.dialog.instructionsStep": "!!!Instructions",
   "wallet.create.dialog.mnemonicsStep": "!!!Mnemonics",
@@ -521,7 +521,7 @@
   "wallet.create.dialog.stepsCounter": "ステップ{currentStep}/{totalSteps}",
   "wallet.create.dialog.templateStep": "!!!Template",
   "wallet.create.dialog.title": "ウォレットを作成する",
-  "wallet.create.dialog.title.itn": "報酬ウォレットを作成する",
+  "wallet.create.dialog.title.itn": "Shelleyウォレットを作成する",
   "wallet.create.dialog.validateStep": "!!!Validate",
   "wallet.create.dialog.walletNameHint": "ウォレット名を入力してください",
   "wallet.hardware.hardwareWalletBegin": "!!!To begin, connect and unlock your <span>Hardware wallet Device</span>",
@@ -545,7 +545,7 @@
   "wallet.legacy.badge.label": "残高",
   "wallet.legacy.notification.actionLearnMore": "もっと知る",
   "wallet.legacy.notification.actionMove": "テストネット用ADAを移し替える",
-  "wallet.legacy.notification.addWallet": "報酬ウォレットを作成する",
+  "wallet.legacy.notification.addWallet": "Shelleyウォレットを作成する",
   "wallet.legacy.notification.addWalletTitle": "報酬ウォレットを作成してください",
   "wallet.legacy.notification.descriptionWithFunds": "!!!\"{transferWalletName}\"\" is a legacy wallet. It does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new, Shelley-compatible wallet. You can create a brand new wallet or move funds to one of the existing wallets.",
   "wallet.legacy.notification.descriptionWithNoFunds": "!!!\"{transferWalletName}\"\" is a legacy wallet. It does not support Shelley delegation features. Move ada from this wallet to a Rewards wallet to delegate your testnet ada stake and earn rewards.",
