--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -480,7 +480,7 @@
   "test.environment.stagingLabel": "Staging",
   "test.environment.testnetLabel": "Testnet",
   "wallet.add.dialog.create.description": "Create a new wallet",
-  "wallet.add.dialog.create.description.itn": "Create a new Rewards wallet",
+  "wallet.add.dialog.create.description.itn": "Create a new Shelley wallet",
   "wallet.add.dialog.create.label": "Create",
   "wallet.add.dialog.import.description": "Import wallets from an earlier version of Daedalus or the Daedalus state directory",
   "wallet.add.dialog.import.label": "Import",
@@ -508,7 +508,7 @@
   "wallet.backup.recovery.phrase.entry.dialog.verification.instructions": "Verify your wallet recovery phrase by clicking words in the exact order you wrote them down.",
   "wallet.create.dialog.configStep": "Config",
   "wallet.create.dialog.create.personal.wallet.button.label": "Create wallet",
-  "wallet.create.dialog.create.personal.wallet.button.label.itn": "Create Rewards wallet",
+  "wallet.create.dialog.create.personal.wallet.button.label.itn": "Create Shelley wallet",
   "wallet.create.dialog.hashImageStep": "Hash & Image",
   "wallet.create.dialog.instructionsStep": "Instructions",
   "wallet.create.dialog.mnemonicsStep": "Mnemonics",
@@ -521,7 +521,7 @@
   "wallet.create.dialog.stepsCounter": "Step {currentStep} of {totalSteps}",
   "wallet.create.dialog.templateStep": "Template",
   "wallet.create.dialog.title": "Create a wallet",
-  "wallet.create.dialog.title.itn": "Create a new Rewards wallet",
+  "wallet.create.dialog.title.itn": "Create a new Shelley wallet",
   "wallet.create.dialog.validateStep": "Validate",
   "wallet.create.dialog.walletNameHint": "Enter wallet name",
   "wallet.hardware.hardwareWalletBegin": "To begin, connect and unlock your <span>Hardware wallet Device</span>",
@@ -545,7 +545,7 @@
   "wallet.legacy.badge.label": "Legacy",
   "wallet.legacy.notification.actionLearnMore": "Learn more",
   "wallet.legacy.notification.actionMove": "Move ada from this wallet",
-  "wallet.legacy.notification.addWallet": "!!!Create a new Rewards wallet",
+  "wallet.legacy.notification.addWallet": "Create a new Shelley wallet",
   "wallet.legacy.notification.addWalletTitle": "Create a new wallet",
   "wallet.legacy.notification.descriptionWithFunds": "<q>{activeWalletName}</q> is a legacy wallet. It does not support Shelley delegation features. To earn ada from delegating your stake, please move all funds from this wallet to a new, Shelley-compatible wallet. You can create a brand new wallet or move funds to one of the existing wallets.",
   "wallet.legacy.notification.descriptionWithNoFunds": "<q>{activeWalletName}</q> is a legacy wallet. It does not support Shelley delegation features. Move ada from this wallet to a Rewards wallet to delegate your testnet ada stake and earn rewards.",
