[DDW-261] Updates restoration dialog text copy

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -635,10 +635,10 @@
   "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer2": "ハードウェアウォレットから復元した残高ウォレットは、資金を報酬ウォレットに移したら直ちに削除することを強くお勧めします。",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind": "どのDaedalusウォレットを復元しますか",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance12Word": "12語",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance12Word.itn": "12語 <span>(残高ウォレット)</span>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance12Word.itn": "12語 <em>(Byronレガシーウォレット)</em>",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance27Word": "27語 - ペーパーウォレット",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance27Word.itn": "27語 - ペーパーウォレット <span>(残高ウォレット)</span>",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindReward15Word": "15語 <span>(報酬ウォレット)</span>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance27Word.itn": "27語 - ペーパーウォレット <em>(Byronレガシーウォレット)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindReward15Word": "15語 <em>(Shelleyウォレット)</em>",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKind": "どのタイプのハードウェアウォレットを復元しますか",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindLedger": "12語、18語、または24語 - Ledger Nano SまたはNano X (残高ウォレット)",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindTrezor": "12語、18語、または24語 - Trezor (残高ウォレット)",
@@ -647,8 +647,8 @@
   "wallet.restore.dialog.step.walletKind.label.walletKindHardware": "ハードウェアウォレット",
   "wallet.restore.dialog.step.walletKind.label.walletKindYoroi": "Yoroiウォレット",
   "wallet.restore.dialog.step.walletKind.label.yoroiWalletKind": "どのタイプのYoroiウォレットを復元しますか",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindBalance15Word": "15語 <span>(残高ウォレット)</span>",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindReward15Word": "15語 <span>(報酬ウォレット)</span>",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindBalance15Word": "15語 <em>(Byronレガシーウォレット)</em>",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindReward15Word": "15語 <em>(Shelleyウォレット)</em>",
   "wallet.restore.dialog.stepsCounter": "ステップ{currentStep}/{totalSteps}",
   "wallet.restore.dialog.tab.title.certificate": "Daedalusペーパーウォレット",
   "wallet.restore.dialog.tab.title.recoveryPhrase": "Daedalusウォレット",
