--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -635,10 +635,10 @@
   "wallet.restore.dialog.step.walletKind.hardwareWalletDisclaimer2": "We strongly recommend that you delete the Balance wallet which is restored from your hardware wallet once you have moved any funds into a Rewards wallet.",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKind": "What kind of Daedalus wallet would you like to restore?",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance12Word": "12 words",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance12Word.itn": "12 words <em>(legacy wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance12Word.itn": "12 words <em>(Byron legacy wallet)</em>",
   "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance27Word": "27 words - paper wallet",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance27Word.itn": "27 words - paper wallet <em>(legacy wallet)</em>",
-  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindReward15Word": "15 words",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindBalance27Word.itn": "27 words - paper wallet <em>(Byron legacy wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.daedalusWalletKindReward15Word": "15 words <em>(Shelley wallet)</em>",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKind": "What kind of hardware wallet would you like to restore?",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindLedger": "12, 18 or 24 words - Ledger Nano S or Nano X (Balance wallet)",
   "wallet.restore.dialog.step.walletKind.label.hardwareWalletKindTrezor": "12, 18 or 24 words - Trezor (Balance wallet)",
@@ -647,8 +647,8 @@
   "wallet.restore.dialog.step.walletKind.label.walletKindHardware": "Hardware wallet",
   "wallet.restore.dialog.step.walletKind.label.walletKindYoroi": "Yoroi wallet",
   "wallet.restore.dialog.step.walletKind.label.yoroiWalletKind": "What kind of Yoroi wallet would you like to restore?",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindBalance15Word": "15 words <em>(legacy wallet)</em>",
-  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindReward15Word": "15 words",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindBalance15Word": "15 words <em>(Byron legacy wallet)</em>",
+  "wallet.restore.dialog.step.walletKind.label.yoroiWalletKindReward15Word": "15 words <em>(Shelley wallet)</em>",
   "wallet.restore.dialog.stepsCounter": "Step {currentStep} of {totalSteps}",
   "wallet.restore.dialog.tab.title.certificate": "Daedalus paper wallet",
   "wallet.restore.dialog.tab.title.recoveryPhrase": "Daedalus wallet",
