--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -122,6 +122,8 @@
   "global.errors.invalidWalletName": "Wallet name requires at least 3 and at most 40 letters",
   "global.errors.paperWalletOpenPdfError": "The file you are trying to replace is open. Please close it and try again.",
   "global.errors.rewardsOpenCsvError": "The file you are trying to replace is open. Please close it and try again.",
+  "global.errors.strongSpendingPassword": "!!!Strong",
+  "global.errors.weakSpendingPassword": "!!!Weak",
   "global.labels.all": "All",
   "global.labels.cancel": "Cancel",
   "global.labels.change": "Change",
